k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xebikart-links
  labels:
    app: xebikart-tooling
    tier: links
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: xebikart-tooling
    tier: links
