k8s-manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xebikart-links-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: links.xebik.art.
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  backend:
    serviceName: xebikart-links
    servicePort: 80
